cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)

project(templete1 C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

add_executable(templete1
    templete1.c
)

pico_enable_stdio_usb(templete1 1)
pico_enable_stdio_uart(templete1 0)

pico_add_extra_outputs(templete1)

target_link_libraries(templete1 
    pico_stdlib 
    hardware_pwm 
    hardware_adc 
    hardware_gpio 
    pico_cyw43_arch_none
)
